src/components/compose.css
/* ... */
#compose-container .multiple .poll-button {
  border-radius: 4px;
}

#compose-container .poll-toolbar {
  display: flex;
  gap: 8px;
  align-items: stretch;
  justify-content: space-between;
  font-size: 90%;
  border-top: 1px solid var(--outline-color);
  padding: 8px;
}
#compose-container .poll-toolbar select {
  padding: 4px;
}

#compose-container .multiple-choices {
  flex-grow: 1;
  display: flex;
  gap: 4px;
  align-items: center;
  border-left: 1px solid var(--outline-color);
  padding-left: 8px;
}

#compose-container .expires-in {
  flex-grow: 1;
  border-left: 1px solid var(--outline-color);
  padding-left: 8px;
  display: flex;
  gap: 4px;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-end;
}

#compose-container .remove-poll-button {
  width: 100%;
  color: var(--red-color);
}

@media (display-mode: standalone) {
  /* No popping in standalone mode */
  #compose-container .pop-button {
    display: none;
  }
}

@media (min-width: 480px) {
  #compose-container button[type='submit'] {
    padding-inline: 24px;
  }
}
#media-sheet {
  .media-form {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 8px;
    min-height: 50vh;

    textarea {
      flex-grow: 1;
      resize: none;
      width: 100%;
      /* height: 10em; */
    }

    footer {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }
}
#media-sheet main {
  padding-top: 8px;
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 8px;
}
#media-sheet .media-preview {
  border: 2px solid var(--outline-color);
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 2px 16px var(--img-bg-color);
  /* checkerboard background */
  background-image: linear-gradient(
      45deg,
      var(--img-bg-color) 25%,
      transparent 25%
    ),
    linear-gradient(-45deg, var(--img-bg-color) 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, var(--img-bg-color) 75%),
    linear-gradient(-45deg, transparent 75%, var(--img-bg-color) 75%);
  background-size: 20px 20px;
  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
  flex: 0.8;
}
#media-sheet .media-preview > * {
  width: 100%;
  height: 100%;
  max-height: 50vh;
  object-fit: scale-down;
  vertical-align: middle;
}

@media (min-width: 50em) {
  #media-sheet main {
    flex-direction: row;
  }
  #media-sheet .media-preview {
    flex: 2;
  }
  #media-sheet .media-preview > * {
    max-height: none;
  }
  /* #media-sheet textarea {
    flex: 1;
    min-height: 100%;
    height: auto;
  } */
}

#custom-emojis-sheet {
  max-height: 50vh;
  max-height: 50dvh;
}
#custom-emojis-sheet main {
  mask-image: none;
}
#custom-emojis-sheet .custom-emojis-list .section-header {
  font-size: 80%;
  text-transform: uppercase;
  color: var(--text-insignificant-color);
  padding: 8px 0 4px;
  position: sticky;
  top: 0;
  background-color: var(--bg-blur-color);
  backdrop-filter: blur(1px);
}
#custom-emojis-sheet .custom-emojis-list section {
  display: flex;
  flex-wrap: wrap;
}
#custom-emojis-sheet .custom-emojis-list button {
  border-radius: 8px;
  background-image: radial-gradient(
    closest-side,
    var(--img-bg-color),
    transparent
  );
}
#custom-emojis-sheet .custom-emojis-list button:is(:hover, :focus) {
  filter: none;
  background-color: var(--bg-faded-color);
}
#custom-emojis-sheet .custom-emojis-list button img {
  transition: transform 0.1s ease-out;
}
#custom-emojis-sheet .custom-emojis-list button:is(:hover, :focus) img {
  transform: scale(1.5);
}

.compose-field-container {
  display: grid !important;

  @media (width < 30em) {
    margin-inline: calc(-1 * var(--form-padding-inline));
    width: 100vw !important;
    max-width: 100vw;

    .compose-field {
      border-radius: 0;
      outline-offset: -2px;
    }
  }

  &.debug {
    grid-template-columns: 1fr 1fr;
  }

  > * {
    grid-area: 1 / 1 / 2 / 2;
  }

  .compose-highlight {
    user-drag: none;
    user-select: none;
    pointer-events: none;
    touch-action: none;
    padding: 8px;
    color: transparent;
    background-color: transparent;
    border: 2px solid transparent;
    line-height: 1.4;
    overflow: auto;
    unicode-bidi: plaintext;
    -webkit-rtl-ordering: logical;
    rtl-ordering: logical;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    min-height: 5em;
    max-height: 50vh;

    /* Follow textarea styles */
    @media (min-width: 40em) {
      max-height: 65vh;
    }

    mark {
      color: inherit;
    }

    .compose-highlight-url,
    .compose-highlight-hashtag {
      background-color: transparent;
      text-decoration: underline;
      text-decoration-color: var(--link-faded-color);
      text-decoration-thickness: 2px;
      text-underline-offset: 2px;
    }
    .compose-highlight-mention,
    .compose-highlight-emoji-shortcode,
    .compose-highlight-exceeded {
      mix-blend-mode: multiply;
      border-radius: 4px;
      box-shadow: 0 0 0 1px;
    }
    .compose-highlight-mention {
      background-color: var(--orange-light-bg-color);
      box-shadow-color: var(--orange-light-bg-color);
    }
    .compose-highlight-emoji-shortcode {
      background-color: var(--bg-faded-color);
      box-shadow-color: var(--bg-faded-color);
    }
    .compose-highlight-exceeded {
      background-color: var(--red-bg-color);
      box-shadow-color: var(--red-bg-color);
    }

    @media (prefers-color-scheme: dark) {
      .compose-highlight-mention,
      .compose-highlight-emoji-shortcode,
      .compose-highlight-exceeded {
        mix-blend-mode: screen;
      }
    }
  }
}

